--- a/public/css/meta.css
+++ b/public/css/meta.css
@@ -1,4 +1,18 @@
 
+.bienvenidocontenedor {
+
+  background-image: url("../img/fondonyr.png");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
 .pintar_sel{
   background: #a2beed !important;
 }
